--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint router --fix"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
