--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint router --fix"
   },
   "dependencies": {
+    "async-lock": "^1.4.0",
     "axios": "^1.3.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
@@ -20,13 +21,18 @@
     "express-ws": "^4.0.0",
     "fs-extra": "^8.1.0",
     "http-errors": "~1.6.2",
+    "ioredis": "^5.3.1",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "multiparty": "^4.2.1",
+    "mutex-js": "^1.1.5",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
+    "redis": "^4.6.5",
+    "redis-lock": "^1.0.0",
+    "redlock": "^5.0.0-beta.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
